// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleOptions {
  options: { flags: 'usgi', rewriteFlags: { unicode: false } },
  flags: 'us'
} 1`] = `
{
  "flags": "sgi",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": {
      "unicode": false,
    },
    "useUnicodeFlag": false,
  },
}
`;

exports[`handleOptions {
  options: { flags: 'usgi', rewriteFlags: { unicode: true } },
  flags: 'us'
} 1`] = `
{
  "flags": "usgi",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": {
      "unicode": true,
    },
    "useUnicodeFlag": true,
  },
}
`;

exports[`handleOptions {
  options: { unicodePropertyEscape: false, rewriteFlags: { unicode: false } },
  flags: undefined
} 1`] = `
{
  "flags": "",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": {
      "unicode": false,
    },
    "unicodePropertyEscape": false,
    "useUnicodeFlag": false,
  },
}
`;

exports[`handleOptions { options: { rewriteFlags: { unicode: false } }, flags: 'u' } 1`] = `
{
  "flags": "",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": {
      "unicode": false,
    },
    "useUnicodeFlag": false,
  },
}
`;

exports[`handleOptions { options: { rewriteFlags: { unicode: false } }, flags: 'us' } 1`] = `
{
  "flags": "s",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": {
      "unicode": false,
    },
    "useUnicodeFlag": false,
  },
}
`;

exports[`handleOptions { options: { rewriteFlags: { unicode: false } }, flags: undefined } 1`] = `
{
  "flags": "",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": {
      "unicode": false,
    },
    "useUnicodeFlag": false,
  },
}
`;

exports[`handleOptions { options: { rewriteFlags: { unicode: true } }, flags: 'us' } 1`] = `
{
  "flags": "us",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": {
      "unicode": true,
    },
    "useUnicodeFlag": true,
  },
}
`;

exports[`handleOptions { options: { rewriteFlags: {} }, flags: 'us' } 1`] = `
{
  "flags": "us",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": {},
    "useUnicodeFlag": true,
  },
}
`;

exports[`handleOptions { options: undefined, flags: '' } 1`] = `
{
  "flags": "",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "useUnicodeFlag": false,
  },
}
`;

exports[`handleOptions { options: undefined, flags: undefined } 1`] = `
{
  "flags": undefined,
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "useUnicodeFlag": undefined,
  },
}
`;
